[package]
name = "psi_xpto"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres"] }
chrono = "0.4"
mediasoup = "0.4" # fictícia, exemplo de crate para WebRTC
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "7.0"
plotters = "0.3"
pdf-rs = "0.4"
rustls = "0.20"
ring = "0.16"

